--- a/wisdomCampus/html/studentManage/student-action-add.html
+++ b/wisdomCampus/html/studentManage/student-action-add.html
@@ -381,10 +381,10 @@
 					selectTime: function(event, lx) {
 						document.activeElement.blur();
 						var _self = event.target;
-						var optionsJson = _self.getAttribute('data-options') || '{}';
-						var options = JSON.parse(optionsJson);
-						var id = _self.getAttribute('id');
-						_self.picker = new $M.DtPicker(options);
+//						var optionsJson = _self.getAttribute('data-options') || '{}';
+//						var options = JSON.parse(optionsJson);
+//						var id = _self.getAttribute('id');
+						_self.picker = new $M.DtPicker({"type": "date"});
 						//设置默认值
 						setTimeout(function() {
 							if(lx == 'fsrq') {
