--- a/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
@@ -357,10 +357,10 @@
 				methods: {
 					selectTime: function(event, lx) {
 						var _self = event.target;
-						var optionsJson = _self.getAttribute('data-options') || '{}';
-						var options = JSON.parse(optionsJson);
-						var id = _self.getAttribute('id');
-						_self.picker = new $M.DtPicker(options);
+//						var optionsJson = _self.getAttribute('data-options') || '{}';
+//						var options = JSON.parse(optionsJson);
+//						var id = _self.getAttribute('id');
+						_self.picker = new $M.DtPicker({"type": "date"});
 						_self.picker.show(function(rs) {
 							console.log('选择结果: ' + rs.text);
 							if(lx == 'thrq') { //谈话日期
