--- a/wisdomCampus/html/studentManage/student-actionDetail.html
+++ b/wisdomCampus/html/studentManage/student-actionDetail.html
@@ -782,6 +782,7 @@
 								imgUrl.push(_attachs[i].url);
 							}
 							multiMedia.addImages(imgUrl);
+							multiMedia.options.imageId = imgUrl.length+1;
 						}
 						
 						if(actionDetialData.kmShow==-1){
@@ -831,7 +832,6 @@
 				console.log('encImg:' + encImg);
 				console.log('encType:' + encType);
 				console.log('encAddr:' + encAddr);
-				console.log('encImg:' + encImg);
 				console.log('encLen:' + encLen);
 				var fj=[];
 				
@@ -957,7 +957,6 @@
 							//记录图片和缩略图地址
 							for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
 								for(var i = 0; i < QNUptoken.Data.length; i++) {
-									console.log(JSON.stringify(QNUptoken.Data[i]));
 									var filePath = QNUptoken.Data[i].P_Key.split("/");
 									var fileName = filePath[filePath.length - 1];
 									var fileId = fileName.split("_")[0];
