--- a/wisdomCampus/html/studentManage/student-action-add.html
+++ b/wisdomCampus/html/studentManage/student-action-add.html
@@ -690,7 +690,6 @@
 
 				//完成
 				document.getElementById('finish').addEventListener('tap', function() {
-					events.hideKeyBoard(hideOption);
 					if(talkTitle.content.replace(/(^\s*)|(\s*$)/g, "") == "") { //为空不允许发送
 						mui.toast('行为说明不能为空');
 						document.getElementById("finish").disabled = false;
@@ -775,7 +774,7 @@
 
 				}
 				console.log('tempData:' + JSON.stringify(tempData));
-				var wd = events.showWaiting();
+//				var wd = events.showWaiting();
 				getActionSaveBehavior(tempData, function(data) {
 					wd.close();
 					console.log('8.保存行为信息 ' + JSON.stringify(data));
@@ -833,7 +832,6 @@
 							//记录图片和缩略图地址
 							for(var j = 0; j < multiMedia.data.PictureArray.length; j++) {
 								for(var i = 0; i < QNUptoken.Data.length; i++) {
-									console.log(JSON.stringify(QNUptoken.Data[i]));
 									var filePath = QNUptoken.Data[i].P_Key.split("/");
 									var fileName = filePath[filePath.length - 1];
 									var fileId = fileName.split("_")[0];
