--- a/wisdomCampus/html/studentManage/student-action.html
+++ b/wisdomCampus/html/studentManage/student-action.html
@@ -375,7 +375,7 @@
 							studentMP.setGrdNameClsName(selectTitle.list,data.RspData.list,function(array){
 								console.log("array=="+JSON.stringify(array));
 								actionArrayData.actionArray = array;
-								mui('.mui-scroll-wrapper').scroll().scrollTo(0,0,50);
+								mui('.mui-scroll-wrapper').scroll().setTranslate(0,0);
 							})
 						} else { //加载更多
 							//合并数组
