--- a/wisdomCampus/html/studentManage/student-attendance.html
+++ b/wisdomCampus/html/studentManage/student-attendance.html
@@ -77,6 +77,16 @@
 				margin-right: 5px;
 				font-size: 18px;
 			}
+			
+			.mui-backdrop {
+			    position: fixed;
+			    z-index: 998;
+			    top: 0;
+			    right: 0;
+			    bottom: 0;
+			    left: 0;
+			    background-color: rgba(0, 0, 0, 0.1);
+			}
 		</style>
 	</head>
 
