--- a/wisdomCampus/html/studentManage/student-index.html
+++ b/wisdomCampus/html/studentManage/student-index.html
@@ -56,6 +56,15 @@
 				font-size: 12px;
 				color: #999;
 			}*/
+			.mui-backdrop {
+			    position: fixed;
+			    z-index: 998;
+			    top: 0;
+			    right: 0;
+			    bottom: 0;
+			    left: 0;
+			    background-color: rgba(0, 0, 0, 0.1);
+			}
 		</style>
 	</head>
 
@@ -113,6 +122,7 @@
 			//遮罩层
 			var flag = false;
 			var mask=mui.createMask(closeMask);
+			mask:"rgba(0,0,0,0.1)";
 			function closeMask(){
 				return flag;
 			}
