--- a/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
+++ b/wisdomCampus/html/studentManage/student-talkRecord-Detail.html
@@ -252,7 +252,7 @@
 						</template>
 						<template v-else>
 							<li class="mui-table-view-cell">
-								<a class="aCss">谈话日期:</a>
+								<a class="aCss">谈话日期</a>
 								<p class="pCss" style="margin:0;">{{talkTime}}</p>
 							</li>
 						</template>
@@ -352,7 +352,7 @@
 					content: '',
 					localTime: getDate(), //记录日期 取的是当前日期
 					teacher: personal.utname, //谈话/教育人 取的是当前登录老师
-					talkTime: getDate2()
+					talkTime: getDate()
 				},
 				methods: {
 					selectTime: function(event, lx) {
